feat: add post get put for workoutsessions and exercises
